    
    by 陳政瑋
        讓 commmon handler daemon process 的 parent 不再是 admin login 的 shell。

2012-10-22 ~~ 2012-10-28
    by Ray Shih:
        refactor the vm_initializer to vm_manager
        implement the apache vm

        Todo: refactor CommonHandler
        Pending:
            Deal with request of init a vm
                Found that class CommonHandler need refactor (some package dependent or file is dead)
                example error messages:  =皿=
                    IOError: [Errno 2] No such file or directory: '/mnt/images/nfs/new_roystonea_script/teddy_roystonea_script/default_cfg'
	by Brian Hu:
		learning how to deploy through fabric
		setting up testing environment of portmapping on remote machine (not complete yet)
        
    by 陳政瑋
        建立 實作用的操作網站，殼寫好。預計下禮拜可供測試。

2012-10-29 ~~ 2012-11-04
    by Ray Shih:
        Refactoring ThreadPoolMixIn (will be used with CommonHandler)
        Figure out the stucture after refactoring the CommonHandler (which will be the base of NodeHandler, etc)
        Read PMM.py since need more detail for refactoring
	by Brian Hu:
		study how to set up test environment with Ray

2012-11-5 ~~ 2012-11-11
    by Ray Shih:
        Refactor BaseServer (from CommonHandler and CommonServer)
        Finish implement the async callback event in base server
        Refactor Message module
        Refactor node, rack, cluster, coordinator, algorithm prototype
            including auto system test from coordinator to node 
            (see file test/test_coordinator)
        Successfully test message chain on staging machine
        Construct setting loader from pure python to yaml (see file scripts/include/config.py)
        Start implement ORM on database table vm

	by Brian Hu:
		write polling task in coordinator && port mapping task in subsystem
		test portmapping on roystonea successfully
        
    by 陳政瑋
        fix roystonea_root problem
        build a hierachy tool
        complete monitor system
